--- a/src/RescueRabbit.Web/Views/_ViewImports.cshtml
+++ b/src/RescueRabbit.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using RescueRabbit.Web.ViewModels.Account
 @using RescueRabbit.Web.ViewModels.Registration
+@using RescueRabbit.Web.Services;
+@using RescueRabbit.Web.Utility;
 
 @using RescueRabbit.Framework.Services
 @using RescueRabbit.Framework.Utility
