--- a/src/RescueRabbit.Web/Views/_ViewImports.cshtml
+++ b/src/RescueRabbit.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using RescueRabbit.Web.ViewModels.Account
+﻿@using RescueRabbit.Web.Controllers;
+@using RescueRabbit.Web.Controllers.Api;
+@using RescueRabbit.Web.ViewModels.Account
 @using RescueRabbit.Web.ViewModels.Registration
 @using RescueRabbit.Web.Services;
 @using RescueRabbit.Web.Utility;
