--- a/src/RescueRabbit.Web/Views/Shared/_Layout.cshtml
+++ b/src/RescueRabbit.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="~/assets/css/site.css" />
     <link rel="stylesheet" href="~/jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="~/assets/css/mdb.min.css" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
