--- a/src/RescueRabbit.Web/Views/Motivation/Create.cshtml
+++ b/src/RescueRabbit.Web/Views/Motivation/Create.cshtml
@@ -13,28 +13,29 @@
     </script>
 }
 
-
-<div class="card">
-    <div class="card-content">
-        <h5>Add something new</h5>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <div class="col-md-8">
-                    <textarea class="form-control" placeholder="Add something to your motivation board..." rows="8"></textarea>
-                </div>
-                <div class="col-md-4">
-                    <div><a>Add a link</a></div>
-                    <div><a>Upload an image</a></div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-12">
-                    <div class="pull-left">
-                        <button class="btn btn-primary" type="submit" ng-click="ctrl.save()">Save changes</button>
-                        <button class="btn btn-white" type="submit" ng-click="ctrl.cancel()">Cancel</button>
+<div ng-controller="CreateMotivationController as ctrl">
+    <div class="card">
+        <div class="card-content">
+            <h5>Add something new</h5>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <div class="col-md-8">
+                        <textarea class="form-control" placeholder="Add something to your motivation board..." rows="8"></textarea>
+                    </div>
+                    <div class="col-md-4">
+                        <div><a>Add a link</a></div>
+                        <div><a>Upload an image</a></div>
                     </div>
                 </div>
-            </div>
-        </form>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <div class="pull-left">
+                            <button class="btn btn-primary" type="submit" ng-click="ctrl.saveMotivation()">Save changes</button>
+                            <button class="btn btn-white" type="submit" ng-click="ctrl.cancelMotivation()">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
