--- a/src/RescueRabbit.Web/Views/Shared/_Header.cshtml
+++ b/src/RescueRabbit.Web/Views/Shared/_Header.cshtml
@@ -13,6 +13,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                @if (IdentityResolver.IsSignedIn())
+                {
+                <li><a asp-controller="Motivation" asp-action="Index">Motivation</a></li>
+                }
                 <li><a asp-controller="Support" asp-action="Directory">Find support</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
