--- a/src/RescueRabbit.Web/Views/Motivation/Create.cshtml
+++ b/src/RescueRabbit.Web/Views/Motivation/Create.cshtml
@@ -20,7 +20,8 @@
             <form class="form-horizontal">
                 <div class="form-group">
                     <div class="col-md-8">
-                        <textarea class="form-control" placeholder="Add something to your motivation board..." rows="8"></textarea>
+                        <textarea class="form-control" placeholder="Add something to your motivation board..." rows="8"
+                                  ng-model="ctrl.motivation.description"></textarea>
                     </div>
                     <div class="col-md-4">
                         <div><a>Add a link</a></div>
